<resources>
    <string name="app_name">ApproxHPVM Demo</string>
    <string name="serviceSwitch">Enable HAR</string>
    <string name="usedConfText">Last used approximation configuration</string>
    <string name="argMaxText">Predicted activity</string>
    <string name="buttonTraceClassify">Trace classification</string>
    <string name="buttonDataImport">Import Raw Data</string>
    <string name="traces_info">Choose which trace to run adaptable AMC on.</string>
    <string name="buttonSelectFile">Import</string>
    <string name="import_a_csv_file_of_raw_data">
        Tapping the button below will load a binary file from application\'s assets into internal database.
    </string>
    <string name="main_button_mobiprox">Mobiprox Activities</string>
    <string name="main_button_arp">ARP Activities</string>
    <string name="button_helper">Decide which app to use</string>
    <string name="stop_listening_button">Stop Listening</string>
    <string name="yes">Yes:</string>
    <string name="left">Left:</string>
    <string name="stop">Stop:</string>
    <string name="no">No:</string>
    <string name="right">Right:</string>
    <string name="go">Go:</string>
    <string name="silence">Silence:</string>
    <string name="up">Up:</string>
    <string name="on">On:</string>
    <string name="unknown">Unknown:</string>
    <string name="down">Down:</string>
    <string name="off">Off:</string>

    <string-array name="battery">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
        <item>No battery saving</item>
    </string-array>

    <string-array name="accuracy">
        <item>90%</item>
        <item>80%</item>
        <item>70%</item>
        <item>60%</item>
    </string-array>
</resources>
