<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="si.fri.matevzfa.approxhpvmdemo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/serviceSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/serviceSwitch"
            android:textSize="16sp" />

        <Button
            android:id="@+id/bTraceClassify"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/buttonTraceClassify"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/primary_text_light"
            android:textSize="16sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/usedConfText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usedConfText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/usedConf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/argMaxText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/argMaxText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/argMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="48sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>