<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".arp.ARPActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="This application starts listening to your commands when you press the button. After the button is pressed the application will indicate which command word to say (Bold text)."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <Button
        android:id="@+id/start_listening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start listening"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WordToSay"
        app:layout_constraintVertical_bias="0.072" />

    <Button
        android:id="@+id/stop_listening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="224dp"
        android:text="@string/stop_listening_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_listening"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Infered command word: "
        app:layout_constraintBottom_toTopOf="@+id/sound_level"
        app:layout_constraintEnd_toStartOf="@+id/selected"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop_listening"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/WordToSayDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="You will see the word you are supposed to say here:"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.119" />

    <TextView
        android:id="@+id/WordToSay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="temp"
        android:textSize="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WordToSayDescription"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/sound_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.668"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop_listening"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/sound_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current sound level: 0dB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_softmax"
        app:layout_constraintVertical_bias="0.116" />

    <TextView
        android:id="@+id/approx_level_noise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current approximation level from noise policy adaptation: "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_softmax"
        app:layout_constraintVertical_bias="0.396" />

    <TextView
        android:id="@+id/approx_level_confidence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current approximation level from confidence adaptation: "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/approx_level_noise"
        app:layout_constraintVertical_bias="0.363" />

    <TextView
        android:id="@+id/avg_sound_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Average sound level: 0dB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toEndOf="@+id/sound_level"
        app:layout_constraintTop_toBottomOf="@+id/table_softmax"
        app:layout_constraintVertical_bias="0.112" />

    <TableLayout
        android:id="@+id/table_softmax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop_listening"
        app:layout_constraintVertical_bias="0.324">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_column="1"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/silence" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="3dip"
                android:text="" />

            <TextView
                android:layout_column="3"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/up" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="3dip"
                android:text="" />

            <TextView
                android:layout_column="5"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/on" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_column="1"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/unknown" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="3dip"
                android:text="" />

            <TextView
                android:layout_column="3"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/down" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="3dip"
                android:text="" />

            <TextView
                android:layout_column="5"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/off" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_column="1"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/yes" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="3dip"
                android:text="" />

            <TextView
                android:layout_column="3"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/left" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="3dip"
                android:text="" />

            <TextView
                android:layout_column="5"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/stop" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_column="1"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/no" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="3dip"
                android:text="" />

            <TextView
                android:layout_column="3"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/right" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="3dip"
                android:text="" />

            <TextView
                android:layout_column="5"
                android:layout_weight="1"
                android:padding="3dip"
                android:text="@string/go" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="3dip"
                android:text="" />
        </TableRow>
    </TableLayout>

    <Spinner
        android:id="@+id/battery_dropdown"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.046" />

    <Spinner
        android:id="@+id/AccuracyDropdown"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.047" />


</androidx.constraintlayout.widget.ConstraintLayout>